<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/addPackagesDescription" />

            <Button
                android:id="@+id/addPackages_btn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/addPackages" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/editPackagesDescription" />

            <Button
                android:id="@+id/editPackages_btn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/editPackages" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/include1"
        android:layout_alignParentLeft="true"
        android:padding="5dp"
        android:paddingBottom="10dp"
        android:text="@string/addWidgetDescription"
        android:textColor="#ff0000" />

    <include
        android:id="@+id/include1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        layout="@layout/footer" />

</RelativeLayout>