<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/logo_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/icon"
                android:paddingTop="30dp"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/appName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/app_name"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/developer_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/appName_textView"
                android:layout_below="@+id/appName_textView"
                android:text="@string/developer"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/version_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/email_textView"
                android:layout_below="@+id/developer_textView"
                android:text="@string/versionNumber" />

            <TextView
                android:id="@+id/email_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/developer_textView"
                android:layout_below="@+id/version_textView"
                android:layout_marginTop="30dp"
                android:autoLink="email"
                android:text="@string/email" />

            <TextView
                android:id="@+id/website_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/email_textView"
                android:layout_below="@+id/email_textView"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:text="@string/website" />
        </RelativeLayout>
    </ScrollView>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        layout="@layout/footer" />

</RelativeLayout>